objects/SC_ServiceType__c.object
<CustomObject>
    <description>Custom object created for Servicing Console app for the various service types</description>
    <fields>
        <fullName>RSC_ActionPlanTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field used to relate Action Plan Template with Service Type</description>
        <label>Action Plan Template</label>
        <referenceTo>ActionPlanTemplate</referenceTo>
        <relationshipLabel>Service Types</relationshipLabel>
        <relationshipName>ActionPlanTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RSC_AssociatedContractExtensionFieldSet__c</fullName>
        <description>Field used to store the name of Associated Contract Extension fieldset.</description>
        <label>Associated Contract Extension FieldSet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSC_CaseExtensionFieldSet__c</fullName>
        <description>Text field to store the API name of Case Extension Field Set name related to service type.</description>
        <label>Case Extension FieldSet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_Assignable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will indicate if the Service Type is currently supported or not</description>
        <label>Assignable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SC_AssociatedContractExtCreationFieldSet__c</fullName>
        <description>This field  store list of Associated Contract Extension  object&apos;s  fieldset api name of case extension to display fields on case creation page as a additional section</description>
        <label>Contract Extension Creation FieldSet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_AssociatedContractExtRecordType__c</fullName>
        <description>This field will store the Associated Contract Extension&apos;s record type name (developer name)</description>
        <label>Associated Contract Ext Record Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_CaseExtensionCreationFieldSet__c</fullName>
        <description>This field  store list of case extension object&apos;s  fieldset api name of case extension to display fields on case creation page as a additional section</description>
        <label>Case Extension Creation FieldSet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_CaseExtensionRecordType__c</fullName>
        <description>This field will store the Case Extension&apos;s record type name (developer name)</description>
        <label>Case Extension Record Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_CommunicationsLabel__c</fullName>
        <description>Field used to hold the wording of the email template to be sent to Papyrus with the Communication API structure.</description>
        <label>Communications Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_Department__c</fullName>
        <description>This field will store the department value based on the Service Type .</description>
        <label>Department</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_Entitlement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The entitlement record to be associated with the service type.</description>
        <label>Entitlement</label>
        <referenceTo>Entitlement</referenceTo>
        <relationshipLabel>Service Types</relationshipLabel>
        <relationshipName>Service_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SC_KnowledgeArticle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to relate the knowledge article for any service type.</description>
        <label>Knowledge Article</label>
        <referenceTo>Knowledge__kav</referenceTo>
        <relationshipLabel>Service Types</relationshipLabel>
        <relationshipName>ServiceTypes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SC_LaunchStandardFlow__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Created to distinguish and run a specific flow/s instead of the standard ones if unchecked for selected service types.</description>
        <label>Launch Standard Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SC_NextActionOnCaseCreationScreen__c</fullName>
        <description>This field story  screen flow api name for manual case creation next screen .</description>
        <label>Next Action On Case Creation Screen</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SC_ServiceType__c</fullName>
        <description>This field stores the Service Type Code</description>
        <label>Service Type</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SC_UnreachableSMSTemplate__c</fullName>
        <description>Contain name of the SMS template.</description>
        <label>Unreachable SMS Template</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SC_WorkType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To assign on work order&apos;s work type for  nurses on the road case creation while creating blood test data.</description>
        <label>Work Type</label>
        <referenceTo>WorkType</referenceTo>
        <relationshipLabel>Service Types</relationshipLabel>
        <relationshipName>SC_ServiceTypes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Service Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SC_Department__c</columns>
        <columns>RSC_ActionPlanTemplate__c</columns>
        <columns>SC_ServiceType__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>SC_Assignable__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Service Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>